update section Scanner ✅

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
     <header></header>
     <main>
       <section class="infos"></section>
-      <section class="scanner"></section>
+      <section class="scanner">
+        <h2 class="heading">Scanner</h2>
+        <button class="start">START</button>
+        <div class="stats">
+          <h2 class="heading">Stats</h2>
+          <i>(transactions are only working with an activation key)</i>
+        </div>
+        <div>
+          <button class="found">
+            accounts found<span class="found_count count">0</span>
+          </button>
+          <button class="without">
+            without transactions<span class="without_count count">0</span>
+          </button>
+          <button class="with">
+            with transactions<span class="with_count count">0</span>
+          </button>
+        </div>
+      </section>
       <section class="accounts"></section>
     </main>
     <footer></footer>
